--- a/src/test/resources/config/prod/automation.properties
+++ b/src/test/resources/config/prod/automation.properties
@@ -1,4 +1,6 @@
-web.url=https://getnada.com/
+web.url=https://ucsd-ext.atlassian.net
+web.services.user=ucsdperftest@gmail.com
+web.services.password=ucsdperftest 
 
 web.services.url=https://dog.ceo/
 web.services.user=
